force-app/main/default/objects/NextActionText__c/NextActionText__c.object-meta.xml
<CustomObject>
    <label>Next Action Text</label>
    <nameField>
        <displayFormat>NAT-{00000000}</displayFormat>
        <label>Next Action Text Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Next Action Texts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>