force-app/main/default/objects/NextActionText__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label Name</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>