force-app/main/default/objects/NextActionText__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Nombre del objeto tal y como aparece en le setup (uncluyendo el __c)</description>
    <label>Object</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>